syntax = "proto3";

package proto;
option go_package = "../proto";

import "err.proto";

message RegisterRequest {
  string account = 1;
  string password = 2;
}

message LoginRequest {
  string account = 1;
  string password = 2;
}

message LoginResponse {
  ErrCode ret = 1;
  string uid = 2;
}
